; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/itss/extr_storage.c_ITSS_create_enum.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/itss/extr_storage.c_ITSS_create_enum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, i32*, i32*, i32*, %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32* }

@IEnumSTATSTG_vtbl = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c" -> %p\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_7__* ()* @ITSS_create_enum to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_7__* @ITSS_create_enum() #0 {
  %1 = alloca %struct.TYPE_7__*, align 8
  %2 = call i32 (...) @GetProcessHeap()
  %3 = call %struct.TYPE_7__* @HeapAlloc(i32 %2, i32 0, i32 40)
  store %struct.TYPE_7__* %3, %struct.TYPE_7__** %1, align 8
  %4 = load %struct.TYPE_7__*, %struct.TYPE_7__** %1, align 8
  %5 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %4, i32 0, i32 4
  %6 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 0
  store i32* @IEnumSTATSTG_vtbl, i32** %6, align 8
  %7 = load %struct.TYPE_7__*, %struct.TYPE_7__** %1, align 8
  %8 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %7, i32 0, i32 0
  store i32 1, i32* %8, align 8
  %9 = load %struct.TYPE_7__*, %struct.TYPE_7__** %1, align 8
  %10 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %9, i32 0, i32 3
  store i32* null, i32** %10, align 8
  %11 = load %struct.TYPE_7__*, %struct.TYPE_7__** %1, align 8
  %12 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %11, i32 0, i32 2
  store i32* null, i32** %12, align 8
  %13 = load %struct.TYPE_7__*, %struct.TYPE_7__** %1, align 8
  %14 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %13, i32 0, i32 1
  store i32* null, i32** %14, align 8
  %15 = call i32 (...) @ITSS_LockModule()
  %16 = load %struct.TYPE_7__*, %struct.TYPE_7__** %1, align 8
  %17 = call i32 @TRACE(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), %struct.TYPE_7__* %16)
  %18 = load %struct.TYPE_7__*, %struct.TYPE_7__** %1, align 8
  ret %struct.TYPE_7__* %18
}

declare dso_local %struct.TYPE_7__* @HeapAlloc(i32, i32, i32) #1

declare dso_local i32 @GetProcessHeap(...) #1

declare dso_local i32 @ITSS_LockModule(...) #1

declare dso_local i32 @TRACE(i8*, %struct.TYPE_7__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
